Fix bug where the scrollbar still showed in chrome based browsers

--- a/styles/index.css
+++ b/styles/index.css
@@ -103,7 +103,7 @@ img {
   scrollbar-width: none;  /* Firefox */
 }
 
-.product-row:-webkit-scrollbar {
+.product-row::-webkit-scrollbar {
   display: none;  /* Safari and Chrome */
 }
 
